fixed overflow issue, changed favicon

--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -25,7 +25,6 @@ canvas {
   width: auto;
   max-width: 500px;
   padding: 2em 1em;
-  overflow-y: scroll;
 }
 
 @media screen and (max-width: $mobile){
