--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -28,6 +28,7 @@
     left: 0;
     right: 0;
     top: 1em;
+    overflow-y: scroll;
   }
 
 }
